--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,5 +1,5 @@
 h1 {
-    color: rgb(109, 75, 204);
+    color: #700bea;
     margin-bottom: 40px;
 }
 
@@ -24,5 +24,6 @@ img {
 }
 
 a {
-    // text-decoration: line-through;
+    box-shadow: none;
+    color: #700bea;
 }
