--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -27,3 +27,15 @@ a {
     box-shadow: none;
     color: #700bea;
 }
+
+.marRSmall{
+    margin-right: 10px;
+}
+
+.marTSmall {
+    margin-top: 10px;
+}
+
+.marRMedium{
+    margin-right: 25px;
+}
