Change social to fixed size, no props, add keys to tag li

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,41 +1,41 @@
-h1 {
-    color: #700bea;
-    margin-bottom: 40px;
-}
+// h1 {
+//     color: #700bea;
+//     margin-bottom: 40px;
+// }
 
-ol {
-    li {
-        text-align: center;
-    }
+// ol {
+//     li {
+//         text-align: center;
+//     }
     
-}
+// }
 
-img {
-    margin-bottom: 20px;
-}
+// img {
+//     margin-bottom: 20px;
+// }
 
-#noUnderLine{
-    text-decoration: none;
-}
+// #noUnderLine{
+//     text-decoration: none;
+// }
 
-.hoverPointer:hover{
-    cursor: pointer;
+// .hoverPointer:hover{
+//     cursor: pointer;
    
-}
+// }
 
-a {
-    box-shadow: none;
-    color: #700bea;
-}
+// a {
+//     box-shadow: none;
+//     color: #700bea;
+// }
 
-.marRSmall{
-    margin-right: 10px;
-}
+// .marRSmall{
+//     margin-right: 10px;
+// }
 
-.marTSmall {
-    margin-top: 10px;
-}
+// .marTSmall {
+//     margin-top: 10px;
+// }
 
-.marRMedium{
-    margin-right: 25px;
-}
+// .marRMedium{
+//     margin-right: 25px;
+// }
