--- a/src/styles/ColorPicker.css
+++ b/src/styles/ColorPicker.css
@@ -5,7 +5,7 @@ p {
     color: #6f0bea4b;
     color: #6f0bea28;
     color: #6f0bea00;
-    color: #ffffff00;
+    color: rgba(255, 255, 255, 0.486);
     /* Old darker font */
     color: #24292e; 
     color: #2e343a;
