Change about, change styles, and dynamic plugin article

--- a/src/styles/ColorPicker.css
+++ b/src/styles/ColorPicker.css
@@ -8,6 +8,6 @@ p {
     color: rgba(255, 255, 255, 0.486);
     /* Old darker font */
     color: #24292e; 
-    color: #2e343a;
+    color: #2c2e31;
     color: rgba(255, 234, 0, 0.89);
 }
